--- a/homepage.html
+++ b/homepage.html
@@ -1012,7 +1012,7 @@
       </div>
     
       <div class="wp-block-uagb-advanced-heading uagb-block-e9723c7e">
-        <a href="#" class="uagb-button uagb-button-primary">
+        <a href="buy.html" class="uagb-button uagb-button-primary">
           Buy College Supplies
         </a>
       </div>
@@ -1045,7 +1045,7 @@
       </div>
     
       <div class="wp-block-uagb-advanced-heading uagb-block-e9723c7e">
-        <a href="#" class="uagb-button uagb-button-primary">
+        <a href="rent.html" class="uagb-button uagb-button-primary">
           Rent College Supplies
         </a>
       </div>
