--- a/index.html
+++ b/index.html
@@ -3,46 +3,260 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login and Sign Up</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Login / Sign-Up</title>
+    <style>
+        /* General Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body, html {
+            height: 100%;
+            font-family: 'Arial', sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: linear-gradient(135deg, #6e7ff3, #ff7e5f);
+        }
+
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+        }
+
+        .form-box {
+            background-color: #fff;
+            padding: 40px 60px;
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+            max-width: 400px;
+            width: 100%;
+            transition: transform 0.3s ease;
+        }
+
+        .form-box:hover {
+            transform: scale(1.05);
+        }
+
+        h1 {
+            text-align: center;
+            color: #333;
+            margin-bottom: 20px;
+            font-size: 2.5rem;
+            font-weight: 600;
+        }
+
+        .form-group {
+            margin-bottom: 20px;
+            position: relative;
+        }
+
+        input {
+            width: 100%;
+            padding: 15px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            outline: none;
+            font-size: 1rem;
+            color: #333;
+            transition: all 0.3s ease;
+        }
+
+        input:focus {
+            border-color: #6e7ff3;
+        }
+
+        input::placeholder {
+            color: #888;
+            opacity: 0.8;
+        }
+
+        button {
+            width: 100%;
+            padding: 15px;
+            background-color: #6e7ff3;
+            border: none;
+            border-radius: 5px;
+            color: white;
+            font-size: 1rem;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        button:hover {
+            background-color: #5a67d8;
+        }
+
+        .toggle-link {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 1rem;
+            color: #6e7ff3;
+            cursor: pointer;
+            transition: color 0.3s ease;
+        }
+
+        .toggle-link:hover {
+            color: #5a67d8;
+            text-decoration: underline;
+        }
+
+        .form-title {
+            font-size: 1.2rem;
+            font-weight: 600;
+            color: #333;
+        }
+
+        .form-action {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        /* Success Message */
+        .success-message {
+            display: none;
+            padding: 15px;
+            background-color: #4CAF50;
+            color: white;
+            border-radius: 5px;
+            text-align: center;
+            margin-top: 20px;
+            font-size: 1rem;
+        }
+
+        /* Animation */
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+                transform: translateY(-30px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .form-box {
+            animation: fadeIn 0.5s ease;
+        }
+
+        /* Mobile */
+        @media (max-width: 768px) {
+            .form-box {
+                padding: 40px 30px;
+            }
+
+            h1 {
+                font-size: 2rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .form-box {
+                padding: 40px 20px;
+            }
+
+            h1 {
+                font-size: 1.5rem;
+            }
+        }
+    </style>
 </head>
 <body>
+
     <div class="container">
         <!-- Login Form -->
-        <div id="loginForm" class="form-box">
-            <h2>Login</h2>
-            <form onsubmit="login(event)">
-                <div class="input-box">
-                    <input type="email" id="loginEmail" required>
-                    <label>Email</label>
+        <div class="form-box" id="loginFormBox">
+            <h1>Login</h1>
+            <form id="loginForm" action="#" method="post">
+                <div class="form-group">
+                    <input type="email" id="loginEmail" name="email" placeholder="Enter your email" required>
                 </div>
-                <div class="input-box">
-                    <input type="password" id="loginPassword" required>
-                    <label>Password</label>
+                <div class="form-group">
+                    <input type="password" id="loginPassword" name="password" placeholder="Enter your password" required>
                 </div>
-                <button type="submit" class="btn">Login</button>
+                <button type="submit">Login</button>
             </form>
-            <p>Don't have an account? <span class="toggle" onclick="toggleForm()">Sign Up</span></p>
+            <p class="toggle-link" id="goToSignup">Don't have an account? Sign Up</p>
         </div>
 
         <!-- Sign Up Form -->
-        <div id="signupForm" class="form-box hidden">
-            <h2>Sign Up</h2>
-            <form onsubmit="signup(event)">
-                <div class="input-box">
-                    <input type="email" id="signupEmail" required>
-                    <label>Email</label>
+        <div class="form-box" id="signupFormBox" style="display: none;">
+            <h1>Sign Up</h1>
+            <form id="signupForm" action="#" method="post">
+                <div class="form-group">
+                    <input type="text" id="signupName" name="name" placeholder="Enter your name" required>
                 </div>
-                <div class="input-box">
-                    <input type="password" id="signupPassword" required>
-                    <label>Password</label>
+                <div class="form-group">
+                    <input type="email" id="signupEmail" name="email" placeholder="Enter your email" required>
                 </div>
-                <button type="submit" class="btn">Sign Up</button>
+                <div class="form-group">
+                    <input type="password" id="signupPassword" name="password" placeholder="Enter your password" required>
+                </div>
+                <button type="submit">Sign Up</button>
             </form>
-            <p>Already have an account? <span class="toggle" onclick="toggleForm()">Login</span></p>
+            <p class="toggle-link" id="goToLogin">Already have an account? Log In</p>
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <!-- Success message that will be shown upon successful submission -->
+    <div class="success-message" id="successMessage">Your account has been successfully created. You can now log in!</div>
+
+    <script>
+        // Get the form elements
+        const loginFormBox = document.getElementById('loginFormBox');
+        const signupFormBox = document.getElementById('signupFormBox');
+        const goToSignup = document.getElementById('goToSignup');
+        const goToLogin = document.getElementById('goToLogin');
+        const successMessage = document.getElementById('successMessage');
+
+        // Switch to Sign Up form
+        goToSignup.addEventListener('click', function () {
+            loginFormBox.style.display = 'none';
+            signupFormBox.style.display = 'block';
+        });
+
+        // Switch to Login form
+        goToLogin.addEventListener('click', function () {
+            signupFormBox.style.display = 'none';
+            loginFormBox.style.display = 'block';
+        });
+
+        // Dummy form submission handling (replace with actual logic)
+        document.getElementById('loginForm').addEventListener('submit', function(event) {
+            event.preventDefault();
+            const email = document.getElementById('loginEmail').value;
+            const password = document.getElementById('loginPassword').value;
+
+            // Normally, here you'd send the data to the server via an API or AJAX
+            // For now, we'll display a success message without alerting the user.
+            successMessage.textContent = 'Login successful for ' + email;
+            successMessage.style.display = 'block';
+            setTimeout(function () {
+                successMessage.style.display = 'none';
+            }, 3000); // Hide the message after 3 seconds
+        });
+
+        document.getElementById('signupForm').addEventListener('submit', function(event) {
+            event.preventDefault();
+            const name = document.getElementById('signupName').value;
+            const email = document.getElementById('signupEmail').value;
+            const password = document.getElementById('signupPassword').value;
+
+            // Normally, here you'd send the data to the server via an API or AJAX
+            // For now, we'll display a success message without alerting the user.
+            successMessage.textContent = 'Sign up successful for ' + name;
+            successMessage.style.display = 'block';
+            setTimeout(function () {
+                successMessage.style.display = 'none';
+            }, 3000); // Hide the message after 3 seconds
+        });
+    </script>
 </body>
 </html>
